--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "is-today-second-saturday?",
+  "name": "is-today-second-saturday",
   "private": true,
   "version": "0.0.0",
   "type": "module",
